# server/user.go
@@ -17,20 +17,12 @@ func NewUsersServer() users.UsersServiceServer {
 }
 
 func (u *UsersServer) GetUserInfo(ctx context.Context, req *users.GetUserInfoRequest) (*users.GetUserInfoResponse, error) {
-	if req.Uid <= 0 {
-		return &users.GetUserInfoResponse{
-			Common: &users.CommonResponse{
-				Code: users.RetCode_USER_NOT_EXIST,
-				Msg:  errcode.GetErrMsg(code.UserNotExist),
-			},
-		}, nil
-	}
 	userInfo, retCode := service.GetUserInfo(ctx, int(req.Uid))
 	if retCode != code.Success {
 		return &users.GetUserInfoResponse{
 			Common: &users.CommonResponse{
 				Code: users.RetCode_ERROR,
-				Msg:  errcode.GetErrMsg(code.ErrorServer),
+				Msg:  code.GetMsg(retCode),
 			},
 		}, nil
 	}
@@ -60,20 +52,12 @@ func (u *UsersServer) GetUserInfo(ctx context.Context, req *users.GetUserInfoReq
 }
 
 func (u *UsersServer) GetUserInfoByPhone(ctx context.Context, req *users.GetUserInfoByPhoneRequest) (*users.GetUserInfoByPhoneResponse, error) {
-	if req.Phone == "" || req.CountryCode == "" {
-		return &users.GetUserInfoByPhoneResponse{
-			Common: &users.CommonResponse{
-				Code: users.RetCode_USER_NOT_EXIST,
-				Msg:  errcode.GetErrMsg(code.UserNotExist),
-			},
-		}, nil
-	}
 	userInfo, retCode := service.GetUserInfoByPhone(ctx, req.CountryCode, req.Phone)
 	if retCode != code.Success {
 		return &users.GetUserInfoByPhoneResponse{
 			Common: &users.CommonResponse{
 				Code: users.RetCode_ERROR,
-				Msg:  errcode.GetErrMsg(code.ErrorServer),
+				Msg:  code.GetMsg(retCode),
 			},
 		}, nil
 	}
@@ -106,7 +90,6 @@ func (u *UsersServer) CheckUserByPhone(ctx context.Context, req *users.CheckUser
 	result := &users.CheckUserByPhoneResponse{
 		Common: &users.CommonResponse{
 			Code: users.RetCode_SUCCESS,
-			Msg:  "",
 		},
 		IsExist: false,
 	}
@@ -118,7 +101,7 @@ func (u *UsersServer) CheckUserByPhone(ctx context.Context, req *users.CheckUser
 		default:
 			result.Common.Code = users.RetCode_ERROR
 		}
-		result.Common.Msg = errcode.GetErrMsg(retCode)
+		result.Common.Msg = code.GetMsg(retCode)
 		return result, nil
 	}
 	result.IsExist = exist
@@ -139,7 +122,7 @@ func (u *UsersServer) Register(ctx context.Context, req *users.RegisterRequest) 
 		default:
 			result.Common.Code = users.RetCode_ERROR
 		}
-		result.Common.Msg = errcode.GetErrMsg(retCode)
+		result.Common.Msg = code.GetMsg(retCode)
 		return result, nil
 	}
 	result.Result = &users.RegisterResult{InviteCode: reg.InviteCode}
@@ -159,10 +142,12 @@ func (u *UsersServer) LoginUser(ctx context.Context, req *users.LoginUserRequest
 			result.Common.Code = users.RetCode_USER_NOT_EXIST
 		case code.UserPwdNotMatch:
 			result.Common.Code = users.RetCode_USER_PWD_NOT_MATCH
+		case code.UserStateForbiddenLogin:
+			result.Common.Code = users.RetCode_USER_STATE_FORBIDDEN_LOGIN
 		default:
 			result.Common.Code = users.RetCode_ERROR
 		}
-		result.Common.Msg = errcode.GetErrMsg(retCode)
+		result.Common.Msg = code.GetMsg(retCode)
 		return result, nil
 	}
 	result.IdentityToken = token
@@ -172,7 +157,6 @@ func (u *UsersServer) LoginUser(ctx context.Context, req *users.LoginUserRequest
 func (u *UsersServer) PasswordReset(ctx context.Context, req *users.PasswordResetRequest) (*users.PasswordResetResponse, error) {
 	result := &users.PasswordResetResponse{Common: &users.CommonResponse{
 		Code: users.RetCode_SUCCESS,
-		Msg:  "",
 	}}
 	retCode := service.PasswordReset(ctx, req)
 	if retCode != code.Success {
@@ -182,28 +166,7 @@ func (u *UsersServer) PasswordReset(ctx context.Context, req *users.PasswordRese
 		default:
 			result.Common.Code = users.RetCode_ERROR
 		}
-		result.Common.Msg = errcode.GetErrMsg(retCode)
-		return result, nil
-	}
-	return result, nil
-}
-
-func (u *UsersServer) CheckUserIdentity(ctx context.Context, req *users.CheckUserIdentityRequest) (*users.CheckUserIdentityResponse, error) {
-	result := &users.CheckUserIdentityResponse{Common: &users.CommonResponse{
-		Code: users.RetCode_SUCCESS,
-		Msg:  "",
-	}}
-	retCode := service.CheckUserIdentity(ctx, req)
-	if retCode != code.Success {
-		switch retCode {
-		case code.UserNotExist:
-			result.Common.Code = users.RetCode_USER_NOT_EXIST
-		case code.UserPwdNotMatch:
-			result.Common.Code = users.RetCode_USER_PWD_NOT_MATCH
-		default:
-			result.Common.Code = users.RetCode_ERROR
-		}
-		result.Common.Msg = errcode.GetErrMsg(retCode)
+		result.Common.Msg = code.GetMsg(retCode)
 		return result, nil
 	}
 	return result, nil
@@ -212,7 +175,6 @@ func (u *UsersServer) CheckUserIdentity(ctx context.Context, req *users.CheckUse
 func (u *UsersServer) UpdateUserLoginState(ctx context.Context, req *users.UpdateUserLoginStateRequest) (*users.UpdateUserLoginStateResponse, error) {
 	result := &users.UpdateUserLoginStateResponse{Common: &users.CommonResponse{
 		Code: users.RetCode_SUCCESS,
-		Msg:  "",
 	}}
 	retCode := service.UpdateUserLoginState(ctx, req)
 	if retCode != code.Success {
@@ -222,7 +184,7 @@ func (u *UsersServer) UpdateUserLoginState(ctx context.Context, req *users.Updat
 		default:
 			result.Common.Code = users.RetCode_ERROR
 		}
-		result.Common.Msg = errcode.GetErrMsg(retCode)
+		result.Common.Msg = code.GetMsg(retCode)
 		return result, nil
 	}
 	return result, nil
@@ -234,7 +196,7 @@ func (u *UsersServer) GetUserInfoByInviteCode(ctx context.Context, req *users.Ge
 		return &users.GetUserByInviteCodeResponse{
 			Common: &users.CommonResponse{
 				Code: users.RetCode_ERROR,
-				Msg:  errcode.GetErrMsg(code.ErrorServer),
+				Msg:  code.GetMsg(retCode),
 			},
 		}, nil
 	}
@@ -373,13 +335,15 @@ func (u *UsersServer) CheckUserState(ctx context.Context, req *users.CheckUserSt
 	result := &users.CheckUserStateResponse{Common: &users.CommonResponse{
 		Code: users.RetCode_SUCCESS,
 	}}
-	retCode := service.CheckUserState(ctx, req)
+	retCode := service.CheckUserState(ctx, req.GetUidList())
 	if retCode != code.Success {
 		switch retCode {
 		case code.UserNotExist:
 			result.Common.Code = users.RetCode_USER_NOT_EXIST
 		case code.UserStateNotVerify:
 			result.Common.Code = users.RetCode_USER_STATE_NOT_VERIFY
+		case code.UserStateForbiddenLogin:
+			result.Common.Code = users.RetCode_USER_STATE_FORBIDDEN_LOGIN
 		default:
 			result.Common.Code = users.RetCode_ERROR
 		}
@@ -391,7 +355,6 @@ func (u *UsersServer) GetUserAccountId(ctx context.Context, req *users.GetUserAc
 	result := &users.GetUserAccountIdResponse{
 		Common: &users.CommonResponse{
 			Code: users.RetCode_SUCCESS,
-			Msg:  "",
 		},
 		InfoList: nil,
 	}
